tests/miniJava/pos/000689_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( java ) { } else if ( 0 ) { } else { } } }
