tests/miniJava/neg/003818_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { if ( ] ) { } else { } } }
